# Keyframe

./: .gitignore  .mcp.json  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES  pyproject.toml
.agents/: mcp_config.json
.agents/plugins/: marketplace.json
.agents/skills/keyframe-video-rag/: SKILL.md
.claude-plugin/: marketplace.json
.claude/skills/keyframe-video-rag/: SKILL.md
.claude/skills/keyframe-video-rag/agents/: openai.yaml
.cursor/: mcp.json
.cursor-plugin/: marketplace.json
.github/workflows/: ci.yml  publish.yml
docs/: client-setup.md  codex-collaboration.md  demo-script.md  devpost-submission.md  submission-checklist.md  tool-examples.md
docs/design/: README.md
evals/: cases.json  mac-plugin-cases.json  validate_inline_frame_trace.py
examples/demo_target/: README.md  slugify.py  test_slugify.py
plugins/keyframe/: .mcp.json  claude.mcp.json  mcp.json  mcp_config.json  plugin.json
plugins/keyframe/.claude-plugin/: plugin.json
plugins/keyframe/.codex-plugin/: plugin.json
plugins/keyframe/.cursor-plugin/: plugin.json
plugins/keyframe/skills/keyframe-video-rag/: SKILL.md
plugins/keyframe/skills/keyframe-video-rag/agents/: openai.yaml
samples/4geeks-function-tutorial/: ATTRIBUTION.md  README.md  SHA256SUMS  source-metadata.json
samples/4geeks-function-tutorial/keyframe-home/cache/: keyframe.sqlite3
src/video_context_mcp/: __init__.py  __main__.py  _whisper_worker.py  acquisition.py  captions.py  cli.py  config.py  constants.py  cursors.py  doctor.py  errors.py  models.py  proxy_cache.py  render_cache.py  server.py  service.py  storage.py  transcription.py  vision.py
tests/: __init__.py  conftest.py  test_acquisition.py  test_cli.py  test_client_compatibility.py  test_config.py  test_cursors.py  test_doctor.py  test_e2e.py  test_inline_frame_trace_validator.py  test_mcp_stdio.py  test_proxy_cache.py  test_render_cache.py  test_sample_cache.py  test_server.py  test_service.py  test_storage.py  test_transcription.py  test_vision.py
tests/fixtures/: README.md  __init__.py  generate_fixture.py  golden.json  keyframe-synthetic.en.vtt
