[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project]
name = "video-context-mcp"
version = "0.2.0"
description = "Local video and animated-GIF RAG for MCP-compatible coding agents"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES"]
authors = [
  { name = "Matthew Wyatt" },
]
keywords = ["mcp", "video", "animated-gif", "ocr", "codex", "claude-code", "cursor", "rag"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "filelock==3.31.0",
  "imagehash==4.3.2",
  "mcp==1.28.1",
  "numpy==2.5.1",
  "opencv-python-headless==4.13.0.92",
  "pillow==12.3.0",
  "platformdirs==4.10.1",
  "pydantic==2.13.4",
  "yt-dlp[default]==2026.7.4",
]

[project.optional-dependencies]
whisper = ["faster-whisper==1.2.1"]

[project.scripts]
video-context-mcp = "video_context_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/MatthewOscar/Keyframe"
Repository = "https://github.com/MatthewOscar/Keyframe"
Issues = "https://github.com/MatthewOscar/Keyframe/issues"

[dependency-groups]
dev = [
  "build==1.5.0",
  "mypy==1.20.2",
  "pytest==8.4.2",
  "pytest-asyncio==0.26.0",
  "pytest-cov==6.3.0",
  "ruff==0.15.22",
  "twine==6.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/video_context_mcp"]

[tool.hatch.build.targets.sdist]
# Use an allowlist so private ignored evaluation artifacts can never enter a
# published source archive merely because they exist beside the checkout.
only-include = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: tests that cross module or process boundaries",
  "e2e: full local-video pipeline tests requiring native FFmpeg, ffprobe, Tesseract, and Node",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["video_context_mcp"]
warn_unreachable = true
